--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<h1> Aqui vamos a hacer un blogpost</h1>
-	<p>Y este es el parrafo de Inicio </p>
+	<p>Y este es el parrafo de Inicio mas atractivo</p>
+	<p> nuevo parrafo creado en version 2 </p>
 </body>
 </html>
