agregado contenido adicional del blog en rama master

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,5 +7,6 @@
 	<h1> Aqui vamos a hacer un blogpost</h1>
 	<p>Y este es el parrafo de Inicio mas atractivo</p>
 	<p> nuevo parrafo creado en version 2 </p>
+	<p> parrafo nuevo de la version master </p>
 </body>
 </html>
