cambio tit desde github
por q puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>titulo</title>
+	<title>titulo 2.0 desde git</title>
 	<link rel="stylesheet" type="text/css" href="estilos/estilos.css"> 
 </head>
 <body>
